# mlir-tutorial

./: CMakeLists.txt  README.md
.github/workflows/: build_and_test_cmake.yml
lib/Analysis/ReduceNoiseAnalysis/: CMakeLists.txt  ReduceNoiseAnalysis.cpp
lib/Conversion/PolyToStandard/: CMakeLists.txt  PolyToStandard.cpp  PolyToStandard.h
lib/Dialect/Noisy/: CMakeLists.txt  NoisyDialect.cpp  NoisyDialect.h  NoisyOps.cpp  NoisyOps.h  NoisyTypes.h
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.h  PolyOps.cpp  PolyOps.h  PolyOps.td  PolyTypes.h  PolyTypes.td
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  AffineFullUnrollPatternRewrite.cpp  AffineFullUnrollPatternRewrite.h  CMakeLists.txt  Passes.h
lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  MulToAdd.h  MulToAddPdll.cpp  MulToAddPdll.h  Passes.h
lib/Transform/Noisy/: CMakeLists.txt  Passes.h  ReduceNoiseOptimizer.cpp  ReduceNoiseOptimizer.h
tests/: CMakeLists.txt  ctlz.mlir
tools/: CMakeLists.txt  tutorial-opt.cpp
